--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "babel-preset-es2015": "^6.1.18",
     "babelify": "^7.2.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "browserify": "^12.0.1",
+    "minifyify": "^7.1.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
