--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "minifyify": "^7.1.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "bundle": "browserify src/index.js -d -t [ babelify --sourceMapRelative . --presets [ es2015 ] ] -p [ minifyify --map bundle.map --output deploy/bundle.map] > deploy/bundle.js"
   },
   "repository": {
     "type": "git",
