--- a/package.json
+++ b/package.json
@@ -3,23 +3,25 @@
   "version": "1.0.0",
   "description": "Converts an array of RGB values to Adobe swatch format",
   "main": "index2.js",
+  "author": "",
   "dependencies": {
     "babel-preset-es2015": "^6.1.18",
     "babelify": "^7.2.0"
   },
   "devDependencies": {
     "browserify": "^12.0.1",
-    "minifyify": "^7.1.0"
+    "minifyify": "^7.1.0",
+    "quantize": "^1.0.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "bundle": "browserify src/index.js -d -t [ babelify --sourceMapRelative . --presets [ es2015 ] ] -p [ minifyify --map bundle.map --output deploy/bundle.map] > deploy/bundle.js"
+    "bundle": "browserify src/index.js -d -t [ babelify --sourceMapRelative . --presets [ es2015 ] ] -p [ minifyify --map bundle.map --output build/bundle.map] > build/bundle.js",
+    "babel": "babel src --out-dir build --presets es2015"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/andywillis/RGBtoAdobeSwatch.git"
   },
-  "author": "",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/andywillis/RGBtoAdobeSwatch/issues"
