--- a/.eslintrc
+++ b/.eslintrc
@@ -8,6 +8,7 @@
   ecmaFeatures: { modules: true },
   rules: {
     "func-names": 0,
-    "space-before-function-paren": [2, { "anonymous": "always", "named": "never" }]
+    "space-before-function-paren": [2, { "anonymous": "always", "named": "never" }],
+    "no-console": 0
   }
 }
