--- a/package.json
+++ b/package.json
@@ -4,11 +4,9 @@
   "description": "Converts an array of RGB values to Adobe swatch format",
   "main": "index2.js",
   "author": "",
-  "dependencies": {
-    "babel-preset-es2015": "^6.1.18",
-    "babelify": "^7.2.0"
-  },
   "devDependencies": {
+    "babel-preset-es2015": "^6.1.18",
+    "babelify": "^7.2.0",
     "browserify": "^12.0.1",
     "minifyify": "^7.1.0",
     "quantize": "^1.0.1"
