--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "bundle": "browserify src/index.js -d -t [ babelify --sourceMapRelative . --presets [ es2015 ] ] -p [ minifyify --map bundle.map --output build/bundle.map] > build/bundle.js",
-    "babel": "babel src --out-dir es2015 --presets es2015"
+    "babel": "babel src --out-dir ES5 --presets es2015"
   },
   "repository": {
     "type": "git",
