--- a/package.json
+++ b/package.json
@@ -4,13 +4,7 @@
   "description": "Converts an array of RGB values to Adobe swatch format",
   "main": "index2.js",
   "author": "",
-  "devDependencies": {
-    "babel-preset-es2015": "^6.1.18",
-    "babelify": "^7.2.0",
-    "browserify": "^12.0.1",
-    "minifyify": "^7.1.0",
-    "quantize": "^1.0.1"
-  },
+  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "bundle": "browserify src/index.js -d -t [ babelify --sourceMapRelative . --presets [ es2015 ] ] -p [ minifyify --map bundle.map --output build/bundle.map] > build/bundle.js",
@@ -23,5 +17,13 @@
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/andywillis/RGBtoAdobeSwatch/issues"
+  },
+  "dependencies": {
+    "babel-preset-es2015": "^6.1.18",
+    "babelify": "^7.2.0",
+    "browserify": "^12.0.1",
+    "minifyify": "^7.1.0",
+    "lodash.uniq": "^3.2.2",
+    "quantize": "^1.0.1"
   }
 }
