--- a/.eslintrc
+++ b/.eslintrc
@@ -9,6 +9,8 @@
   rules: {
     "func-names": 0,
     "space-before-function-paren": [2, { "anonymous": "always", "named": "never" }],
-    "no-console": 0
+    "no-console": 0,
+    "comma-dangle": 0,
+    "padded-blocks": 0
   }
 }
