--- a/.eslintrc
+++ b/.eslintrc
@@ -7,6 +7,7 @@
   },
   ecmaFeatures: { modules: true },
   rules: {
+    "default-case": 0,
     "func-names": 0,
     "space-before-function-paren": [2, { "anonymous": "always", "named": "never" }],
     "no-console": 0,
