--- a/package.json
+++ b/package.json
@@ -7,12 +7,8 @@
     "example": "example"
   },
   "dependencies": {
-    "babel-preset-es2015": "^6.1.18",
     "lodash.uniq": "^3.2.2",
-    "quantize": "^1.0.1",
-    "babelify": "^7.2.0",
-    "browserify": "^12.0.1",
-    "minifyify": "^7.1.0"
+    "quantize": "^1.0.1"
   },
   "devDependencies": {},
   "scripts": {
