--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "example": "example"
   },
   "dependencies": {
+    "babel-preset-es2015": "^6.1.18",
     "lodash.uniq": "^3.2.2",
     "quantize": "^1.0.1"
   },
