--- a/package.json
+++ b/package.json
@@ -7,15 +7,23 @@
     "example": "example"
   },
   "dependencies": {
+    "babel": "^6.3.13",
+//    "babel-cli": "^6.3.13",
+    "babel-eslint": "^4.1.6",
     "babel-preset-es2015": "^6.1.18",
+    "documentation": "^3.0.4",
+    "eslint": "^1.10.3",
+    "eslint-config-airbnb": "^2.0.0",
     "lodash.uniq": "^3.2.2",
-    "quantize": "^1.0.1"
+    "quantize": "^1.0.1",
+    "tape": "^4.2.2"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "bundle": "browserify src/index.js -d -t [ babelify --sourceMapRelative . --presets [ es2015 ] ] -p [ minifyify --map bundle.map --output build/bundle.map] > build/bundle.js",
-    "babel": "babel src --out-dir build --presets es2015"
+    "bundle": "browserify src/index.js -d -t [ babelify --sourceMapRelative . --presets [ es2015 ] ] -p [ minifyify --map bundle.map --output build/bundle/bundle.map] > build/bundle/bundle.js",
+    "es5": "babel src --out-dir build/ES5 --presets es2015",
+    "example": "cd example & babel-node example.js --presets es2015",
+    "doc": "documentation src/index.js -o doc -f html -g"
   },
   "repository": {
     "type": "git",
