--- a/package.json
+++ b/package.json
@@ -8,19 +8,21 @@
   },
   "dependencies": {
     "babel": "^6.3.13",
-//    "babel-cli": "^6.3.13",
+    "babel-cli": "^6.3.13",
     "babel-eslint": "^4.1.6",
     "babel-preset-es2015": "^6.1.18",
+    "babelify": "^7.2.0",
     "documentation": "^3.0.4",
     "eslint": "^1.10.3",
     "eslint-config-airbnb": "^2.0.0",
     "lodash.uniq": "^3.2.2",
+    "minifyify": "^7.1.0",
     "quantize": "^1.0.1",
     "tape": "^4.2.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "bundle": "browserify src/index.js -d -t [ babelify --sourceMapRelative . --presets [ es2015 ] ] -p [ minifyify --map bundle.map --output build/bundle/bundle.map] > build/bundle/bundle.js",
+    "bundle": "browserify src/index.js -d -t [ babelify --sourceMapRelative . --presets [ es2015 ] ] -p [ minifyify --map bundle.map --output build/bundle.map] > build/bundle.js",
     "es5": "babel src --out-dir build/ES5 --presets es2015",
     "example": "cd example & babel-node example.js --presets es2015",
     "doc": "documentation src/index.js -o doc -f html -g"
@@ -36,7 +38,7 @@
     "adobe"
   ],
   "author": "Andy Willis",
-  "license": "ISC",
+  "license": "FSF",
   "bugs": {
     "url": "https://github.com/andywillis/rgb2adobeswatch/issues"
   }
