--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "documentation": "^3.0.4",
     "eslint": "^1.10.3",
     "eslint-config-airbnb": "^2.0.0",
+    "eslint-plugin-react": "^3.11.3",
     "lodash.uniq": "^3.2.2",
     "minifyify": "^7.1.0",
     "quantize": "^1.0.1",
