--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "rgb2adobeswatch",
   "version": "1.5.1",
   "description": "Converts an array of RGB values to Adobe ASE swatch format",
-  "main": "lib/index.js",
+  "main": "index.js",
   "directories": {
     "doc": "doc",
     "example": "example",
     "test": "test"
   },
   "devDependencies": {
+    "babel": "^6.3.13",
     "babel-cli": "^6.3.15",
     "babel-preset-es2015": "^6.3.13",
     "documentation": "^3.0.4",
@@ -22,11 +23,12 @@
     "quantize": "^1.0.1"
   },
   "scripts": {
-    "test": "npm run compile && tape test/*.js | tap-spec",
-    "example": "cd example && node example.js",
-    "es5": "babel lib --out-dir build --presets es2015",
-    "doc": "documentation lib/index.js -o doc -f html -g",
-    "compile": "npm run doc && npm run es5"
+    "test": "npm run es5 && tape test/*.js | tap-spec",
+    "example": "cd example && babel-node example.js --presets es2015",
+    "es5": "babel src --out-dir lib --presets es2015",
+    "doc": "documentation index.js -o doc -f html -g",
+    "compile": "npm run doc && npm run es5",
+    "prepublish": "npm run compile"
   },
   "repository": {
     "type": "git",
